Fixed some styling issues on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,14 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
+html {
+  font-size: calc(10px + 1vmin);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: hsl(218, 12%, 18%);
-  overflow: visible;
 }
 
 html, body, #root {
